feat: mf-5230 connect social platforms
mf-5455

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -80,6 +80,13 @@
     "add_nft_contract_search_hint": "Search NFT collection name, symbol or contract address",
     "applications": "Applications",
     "application_settings": "APP Settings",
+    "connect_persona": "Connect Persona",
+    "not_current_account": "Not your current account.",
+    "request_to_switch_account": "Please switch to <bold>@{{- account}}</bold> to continue the account verification progress.",
+    "request_to_login": "Please sign up or login {{- siteName}} to connect Mask Network.",
+    "connected_already": "<bold>@{{- account}}</bold> connected already.",
+    "switch_for_more_connections": "Switch accounts and try more connections.",
+    "send_post_successfully": "Sent verification post successfully.<br/> <br/> You could check the verification result on Mask Pop-up after few minutes. If failed, try sending verification post again.",
     "application_tooltip_hint_sns_persona_unmatched": "Twitter ID verified persona({{currentSNSConnectedPersonaPublicKey}}) is not consistent with your current persona({{currentPersonaPublicKey}}). Please switch to persona({{currentSNSConnectedPersonaPublicKey}}) and try again.",
     "application_tooltip_hint_verify": "Please verify your social account",
     "application_tooltip_hint_create_persona": "Please create your persona and use it",
@@ -173,6 +180,8 @@
     "settings": "Settings",
     "do_not_see_your_nft": "Don't see your NFT?",
     "import_nft": "Import NFT",
+    "setup_guide_post_content": "Post content:",
+    "setup_guide_verify_tip": "We will need to verify your Twitter account and record it on the NextID. Please send this tweet for validation and hold.",
     "setup_guide_login": "Please sign up or log in to connect Mask Network.",
     "setup_guide_find_username_text": "Link your profile to your persona.",
     "setup_guide_connect_auto": "Connect",
@@ -182,8 +191,8 @@
     "setup_guide_verify_dismiss": "Don't show again.",
     "setup_guide_verify_checking": "Checking",
     "setup_guide_verify_post_not_found": "No verification post found",
-    "setup_guide_connected_title": "Connected and verified successfully.",
-    "setup_guide_connected_description": "Try exploring Web3 dApps features on social media.",
+    "setup_guide_connected_title": "Verify Account",
+    "setup_guide_connected_description": "Account successfully connected to persona",
     "setup_guide_verifying": "Verifying",
     "setup_guide_verifying_failed": "Re-Verify",
     "user_guide_tip_connected": "You have connected to this account successfully.",
