--- a/packages/plugins/Calendar/src/locales/en-US.json
+++ b/packages/plugins/Calendar/src/locales/en-US.json
@@ -6,5 +6,8 @@
     "price": "Price",
     "date": "Date",
     "loading": "Loading",
-    "powered_by": "Powered By"
+    "powered_by": "Powered By",
+    "news": "News",
+    "event": "Event",
+    "nfts": "NFTs"
 }
