feat: popup general settings (#10752)
* feat: popup general settings

* fix: run codegen

* chore: cspell

* feat: supported sites

* feat: backup password modal

* chore: reply review

* chore: i18n

* chore: reply review

* chore: reply review

---------

Co-authored-by: nuanyang233 <nuanyang233@users.noreply.github.com>

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -954,7 +954,7 @@
     "popups_wallet_imported_group_title": "Imported Wallets",
     "popups_backup_persona": "Backup Persona",
     "popups_persona_rename_tips": "Persona name must between 1 to 24 characters.",
-    "popups_backup_password_rules": "Password should contain uppercase and lowercase letters, special characters and numbers. ",
+    "popups_backup_password_rules": "Password should contain uppercase and lowercase letters, special characters and numbers.",
     "popups_backup_password_rules_tips": "Backup password must be 8-20 characters, including uppercase, lowercase, special characters and numbers.",
     "popups_backup_password_tips": "Please set up backup password to export private key.",
     "popups_backup_password_inconsistency": "The two entered passwords are inconsistent.",
@@ -991,6 +991,38 @@
     "popups_wallet_unlock_erc721_tips": "By granting permission, you are allowing the following <br /> contract to access your NFTs",
     "popups_wallet_rpc_error": "There was a network or RPC provider error, please try again later!",
     "popups_wallet_gas_price_should_greater_than_zero": "Gas price should be greater than 0",
+    "popups_settings_general": "General",
+    "popups_settings_basic_setting": "Basic setting",
+    "popups_settings_language": "Language",
+    "popups_settings_appearance": "Appearance",
+    "popups_settings_supported_sites": "Supported Sites",
+    "popups_settings_backup_and_recovery": "Backup & Recovery",
+    "popups_settings_data_correlation": "Data correlation",
+    "popups_settings_cloud_backup": "Cloud Backup",
+    "popups_settings_local_backup": "Local Backup",
+    "popups_settings_restore_database": "Restore Database",
+    "popups_settings_restore_database_description": "Restore from a previous database backup",
+    "popups_settings_backup_password": "Backup Password",
+    "popups_settings_support": "Support",
+    "popups_settings_feedback": "Feedback",
+    "popups_settings_faq": "FAQ&Tutorial",
+    "popups_settings_website": "Website",
+    "popups_settings_about": "About",
+    "popups_settings_version": "Version",
+    "popups_settings_service_agreement": "Service Agreement",
+    "popups_settings_primary_policy": "Privacy Policy",
+    "popups_settings_language_auto": "Follow System",
+    "popups_settings_appearance_default": "Follow System",
+    "popups_settings_appearance_light": "Light",
+    "popups_settings_appearance_dark": "Dark",
+    "popups_settings_select_language": "Select language",
+    "popups_settings_supported_sites_description": "Manage the permissions of the Mask Network plugin to inject into websites. Once turned off, the use of the plugin on this site will no longer be supported.",
+    "popups_settings_supported_website_one": "<strong>{{count}}<strong> Website",
+    "popups_settings_supported_website_other": "<strong>{{count}}<strong> Websites",
+    "popups_settings_set_backup_password": "Change Backup Password",
+    "popups_settings_new_backup_password": "New password",
+    "popups_settings_new_backup_password_error_tips": "New password cannot be the same as your current password.",
+    "popups_settings_backup_password_invalid": "Lack of number, letter or special character.",
     "nft_wallet_label": "Wallet",
     "plugin_profile_no_wallets": "Connect your wallet here.<br/>This section will be shown to your encrypted friends.<br/>The display content includes digital art, donations, badges<br/>and other public information on chain.",
     "nft_input_address_label": "Please input contract address",
