--- a/packages/mask/dashboard/locales/en-US.json
+++ b/packages/mask/dashboard/locales/en-US.json
@@ -454,8 +454,8 @@
     "data_backup_title": "Select the contents of the backup",
     "data_backup_description": "Please select the appropriate method to restore your personal data.",
     "cloud_backup_title": "login to your Mask Cloud",
-    "cloud_backup_exsist_tips": "The email address used for the last backup was <strong>{{account}}</strong>.",
-    "cloud_backup_no_exsist_tips": "Please use your frequently used email account or mobile phone for backup.",
+    "cloud_backup_exist_tips": "The email address used for the last backup was <strong>{{account}}</strong>.",
+    "cloud_backup_no_exist_tips": "Please use your frequently used email account or mobile phone for backup.",
     "cloud_backup_email_title": "E-mail",
     "cloud_backup_phone_title": "Mobile",
     "cloud_backup_incorrect_email_address": "The email address is incorrect.",
@@ -474,7 +474,7 @@
     "cloud_backup_successfully_tips": "You’ve uploaded backup to Mask Cloud Service successfully.",
     "cloud_backup_merge_to_local_database": "Merge data to local database",
     "cloud_backup_download_link_expired": "Download link is expired",
-    "cloud_backup_enter_backup_password_to_decryp_file": "Please enter cloud backup password to download file.",
+    "cloud_backup_enter_backup_password_to_decrypt_file": "Please enter cloud backup password to download file.",
     "cloud_backup_incorrect_backup_password": "Incorrect cloud backup password, please try again.",
     "cloud_backup_merge_to_local": "Merge to local",
     "cloud_backup_merge_to_local_congratulation_tips": "Data merged from Mask Cloud Service to local successfully. Re-enter password to encrypt and upload backup to Mask Cloud Service.",
