--- a/packages/plugins/Calendar/src/locales/en-US.json
+++ b/packages/plugins/Calendar/src/locales/en-US.json
@@ -8,6 +8,6 @@
     "loading": "Loading",
     "powered_by": "Powered By",
     "news": "News",
-    "event": "Event",
+    "event": "Events",
     "nfts": "NFTs"
 }
