--- a/packages/plugins/Calendar/src/locales/en-US.json
+++ b/packages/plugins/Calendar/src/locales/en-US.json
@@ -9,5 +9,6 @@
     "powered_by": "Powered By",
     "news": "News",
     "event": "Events",
-    "nfts": "NFTs"
+    "nfts": "NFTs",
+    "content_end": "The content is fully loaded"
 }
