--- a/packages/plugins/Calendar/src/locales/en-US.json
+++ b/packages/plugins/Calendar/src/locales/en-US.json
@@ -1,6 +1,6 @@
 {
     "title": "Calendar",
-    "description": "Highly integrated Web3 news & events on Twitter. Providing Token, NFT, AMA, and regulation events.",
+    "description": "Highly integrated Web3 news and events on Twitter, providing information on tokens, NFTs, AMAs, and regulatory events.",
     "empty_status": "No content for the last two weeks.",
     "total": "Total",
     "price": "Price",
@@ -8,6 +8,7 @@
     "loading": "Loading",
     "powered_by": "Powered By",
     "news": "News",
-    "event": "Event",
-    "nfts": "NFTs"
+    "event": "Events",
+    "nfts": "NFTs",
+    "content_end": "The content is fully loaded"
 }
