docs(i18n): sync i18n files from Crowdin (#10811)

--- a/packages/mask/shared-ui/locales/ko-KR.json
+++ b/packages/mask/shared-ui/locales/ko-KR.json
@@ -17,36 +17,64 @@
     "connect": "연결",
     "back": "뒤로",
     "more": "더 보기",
+    "remove": "삭제",
+    "to": "To",
     "add": "추가",
     "approve": "승인",
     "address": "주소",
     "amount": "금액",
+    "coming_soon": "Coming soon",
+    "max": "최대치",
+    "data": "데이터",
     "available_balance": "사용 가능한 잔액",
+    "available_amount": "{{- amount}} 이용가능",
+    "failed_to_transfer_token": "토큰 전송 실패: {{- message}}",
+    "failed_to_transfer_nft": "네트워크나 컨트랙트 오류",
     "operation": "조작",
     "gas_limit": "가스 한도",
     "gas_price": "가스 가격",
+    "value": "값",
+    "balance": "잔액",
+    "gwei": "Gwei",
     "redirect_to": "리다이렉트",
+    "welcome_back": "환영합니다",
     "sign": "사인",
     "load_failed": "로딩 실패",
     "web3_profile_card_name": "웹3 프로필 카드",
     "powered_by": "기술 지원",
     "powered_by_whom": "<span>{{whom}}</span>에 의해 구동됨",
     "reload": "다시 로드",
+    "rename": "이름 변경",
+    "contacts": "연락처",
+    "currency": "통화",
     "load": "로드",
     "load_all": "모두 로드하기",
     "no_data": "데이터 없음",
     "tip": "팁",
     "tags": "태그",
     "price": "가격",
+    "floor_price": "최저 가격",
     "default": "디폴트",
     "contract": "컨트랙트",
     "plugins": "플러그인",
+    "signing": "진행중...",
+    "network": "네트워크",
+    "backup": "백업",
+    "password": "비밀번호",
+    "reenter": "다시 입력",
+    "copy": "복사",
+    "or": "또는",
+    "send": "발송",
+    "transfer_to": "To",
+    "added_by_user": "사용자별추가",
+    "congratulations": "축하합니다",
     "token_standard": "토큰 표준",
     "persona_required": "페르소나가 필요합니다.",
     "initializing": "초기화 중...",
     "redirect_alert": "브라우저가 리다이렉트하지 않으면 <terms>여기 클릭</terms>",
     "typed_message_text_alert": "현재 TypedMessageText만 지원합니다.",
     "badge_renderer_provided_by_plugin": "플러그인으로 제공",
+    "add_assets": "자산 추가",
     "add_nft_contract_search_hint": "NFT 컨트렉트 이름이나 주소를 검색하기",
     "applications": "어플리케이션",
     "application_settings": "앱 설정",
@@ -133,6 +161,8 @@
     "no_NFTs_found": "NFT가 없습니다.",
     "dashboard_collectible_menu_all": "모든({{count}})",
     "days": "{{days}} 일마다",
+    "decrypted_postbox_only_visible_to_yourself": "나에게만 보이기",
+    "decrypted_postbox_visible_to_all": "모두 Mask 플러그인 사용자",
     "decrypted_postbox_decrypting": "Mask 해독 중",
     "decrypted_postbox_decoding": "Mask 디코딩 중",
     "decrypted_postbox_decrypting_finding_person_key": "Mask가 상대방의 공개 키를 찾고 있습니다...",
@@ -149,8 +179,12 @@
     "failed": "실패",
     "buy_now": "바로 매수하기",
     "no_enough_gas_fees": "가스비 부족",
+    "gas_fee": "가스비",
+    "insufficient_funds_for_gas": "자산이나 가스비가 부족합니다.",
     "open": "열기",
     "settings": "설정",
+    "do_not_see_your_nft": "NFT를 보셨나요?",
+    "import_nft": "NFT 불러오기",
     "setup_guide_login": "가입하거나 로그인하고 Mask Network를 연결하세요.",
     "setup_guide_find_username_text": "프로필과 페르소나를 연결시키려면 아이디가 필요합니다.",
     "setup_guide_connect_auto": "연결",
@@ -218,9 +252,13 @@
     "go_wrong": "오류가 발생합니다.",
     "search_box_placeholder": "여기서 검색하기",
     "select_all": "전체 선택",
+    "nonce": "Nonce",
+    "none": "N/A",
     "select_none": "전체 선택 취소",
     "all_friends": "모든 친구들",
     "select_specific_friends_dialog__title": "지정 연락처 선택",
+    "select_friends_dialog_persona_connect_one": "해당 페르소나는 이미 계정에 연결되었습니다.",
+    "select_friends_dialog_persona_connect_other": "해당 페르소나는 이미 여러 계정에 연결되었습니다.",
     "service_decryption_failed": "해독 실패",
     "service_username_invalid": "무효한 아이디입니다",
     "speed_up": "가속하기",
@@ -276,11 +314,21 @@
     "wallet_status_button_change": "바꾸기",
     "wallet_status_button_change_to_evm": "EVM 월렛으로 변경하기",
     "wallet_status_button_copy_address": "주소 복사",
+    "wallets_transfer_contact_wallet_name_already_exist": "이미 존재된 이름입니다.",
     "wallet_transfer_account": "발송 계정",
     "wallet_transfer_receiving_account": "받는 계정",
     "wallet_transfer_to_address": "주소",
     "wallet_transfer_send": "보내기",
+    "wallet_transfer_placeholder": "Ens 나 주소(0x)",
     "wallet_transfer_title": "전송",
+    "wallet_transfer_my_wallets_title": "나의 월렛",
+    "wallet_transfer_my_contacts_title": "연락처",
+    "wallets_transfer_warning_contract_address": "이 주소는 연락처 주소입니다.",
+    "wallets_transfer_error_address_absence": "받는 주소 입력",
+    "wallets_transfer_error_address_scam": "이 주소는 사기 주소일 수 있습니다.",
+    "wallets_transfer_error_invalid_address": "잘못된 월렛 주소.",
+    "wallets_transfer_error_invalid_domain": "해당 ENS가 존재하지 않습니다.",
+    "wallet_transfer_error_no_ens_support": "네트워크는 ENS를 지원하지 않습니다.",
     "wallet_transfer_error_amount_absence": "금액 입력",
     "wallet_transfer_error_address_absence": "받는 주소 입력",
     "wallet_transfer_error_same_address_with_current_account": "받는 주소는 발송 주소와 동일한 주소입니다. 다시 확인해 주세요.",
@@ -302,6 +350,8 @@
     "wallet_transfer_gwei": "GWEI",
     "wallet_transfer_between_my_accounts": "나의 계정간 송금하기",
     "weekly": "주간",
+    "relative_time_days_ago_one": "{{count}} 일 전",
+    "relative_time_days_ago_other": "{{count}} 일 전",
     "plugin_wallet_snackbar_wait_for_confirming": "이 거래를 월렛에서 확인하세요",
     "plugin_wallet_snackbar_hash": "거래 제출 완료",
     "plugin_wallet_snackbar_confirmed": "거래 확인 완료",
@@ -601,6 +651,13 @@
     "popups_create_persona": "페르소나 만들기",
     "popups_restore_and_login": "등록 또는 로그인",
     "popups_name": "이름",
+    "popups_connect_social_tips": "소셜 미디어 계정을 연결하기",
+    "popups_save_successfully": "저장 성공",
+    "popups_save_failed": "저장 실패",
+    "popups_display_web3_address_tips": "웹3 프로필 페이지에 다음 주소를 표시하고 팁을 받는 데 사용합니다.",
+    "popups_verify_account_tips": "자신의 페르소나를 연결하고 확인한 후, 웹3 풋프린트를 표시하거나 팁을 받기 위한 관련 주소를 설정할 수 있습니다.",
+    "popups_other_social_accounts_tips": "<strong>Instagram,</strong> <strong>Facebook,</strong>및 <strong>Minds,</strong>과 같은 다른 소셜 네트워킹 플랫폼은 Twitter의 Next.ID 인증 연결과 같은 검증된 관계가 없습니다. <br /> <br /> 이러한 플랫폼에서 계정과 페르소나를 연결할 때 암호화된 게시물 전송만 지원합니다.",
+    "popups_empty_wallet_proofs_tips": "관련된 월렛이 없습니다. <strong> 월렛 추가.</strong>",
     "popups_social_account": "소셜 계정",
     "popups_connected_wallets": "연결된 월렛",
     "popups_change_owner": "소유자 변경",
@@ -622,14 +679,45 @@
     "popups_cancel_transaction": "거래 취소",
     "popups_import_the_wallet": "월렛 불러오기",
     "popups_delete_wallet": "월렛 연결 해제",
+    "popups_release_bind_wallet_title": "월렛 연결을 해제하시겠습니까?",
+    "popups_release_bind_wallet_tips": "월렛 <strong>{{identity}}</strong>에서 {{personaName}} 의 연결을 해제하시겠습니까？",
     "popups_create_wallet": "월렛 만들기",
     "popups_back_up_the_wallet": "월렛 백업",
     "popups_recovery_wallet": "월렛 복구",
     "popups_wallet_setting": "월렛 설정",
+    "popups_wallet_settings_change_network": "네트워크 전환",
+    "popups_wallet_settings_auto_unlock_time": "Auto-lock 시간",
+    "popups_wallet_settings_auto_unlock_time_mins": "{{time}} 분",
+    "popups_wallet_settings_auto-unlock_time_hour_one": "{{count}} 시간",
+    "popups_wallet_settings_auto-unlock_time_hour_other": "{{count}} 시간",
+    "popups_wallet_settings_auto_unlock_time_title": "Auto-lock",
+    "popups_wallet_settings_change_payment_password": "결제 비밀번호 변경",
+    "popups_wallet_settings_show_private_key": "개인 키 보기",
+    "popups_wallet_settings_backup_wallet": "지갑 백업",
+    "popups_wallet_settings_enter_payment_password": "결제 비밀번호 입력",
+    "popups_wallet_settings_export_private_key_title": "월렛을 선택하여 개인 키를 내보내기",
+    "popups_wallet_settings_rename_tips": "월렛 이름은 3~18자 이내로 입력해주세요.",
+    "popups_wallet_settings_name_exists": "이미 존재된 월렛 이름입니다.",
+    "popups_wallet_settings_remove_wallet": "월렛 삭제",
+    "remove_wallet_title": "월렛을 삭제하시겠습니까?",
+    "remove_wallet_message": "현재 월렛은 (<bold>{{wallet}}</bold>) SmartPay의 관리자 (<bold>{{other_wallets}}</bold>) 월렛입니다.<br/> 이 월렛을 삭제하면 SmartPay 월렛도 같이 삭제될 수 있습니다.",
+    "popups_wallet_settings_are_you_sure_remove_wallet": "이 월렛을 삭제하시겠습니까?",
+    "popups_wallet_settings_address_exists": "이 월렛 주소가 이미 존재합니다.",
+    "popups_wallet_settings_auto_lock_tips": "월렛이 자동으로 잠기기 전까지의 시간을 설정해 주시기 바랍니다.",
+    "popups_wallet_settings_minutes": "분",
+    "popups_wallet_settings_auto_lock_number_only": "이 부분은 숫자가 필요합니다.",
+    "popups_wallet_settings_current_management_account": "현재 관리자 계정",
+    "popups_wallet_settings_local_persona_or_wallet_only": "로컬 페르소나나 월렛만 가능합니다.",
+    "popups_wallet_connected_sites": "연결된 사이트",
+    "popups_wallet_connected_sites_description": "월렛 이름은 이미 웹사이트에 연결됩니다. 연결된 웹사이트는 회원님의 계정 주소를 확인할 수 있습니다.",
+    "popups_wallet_disconnect_confirm": "연결을 끊으시겠습니까? 사이트 기능을 사용할 수 없을 수 있습니다.",
+    "popups_wallet_disconnect_all": "모두 계정 연결 해제",
+    "popups_wallet_disconnect_site_success": "연결 해제 성공",
     "popups_gas_fee_settings": "기스비 설정",
     "popups_assets": "자산",
     "popups_send": "발송",
     "popups_set_the_payment_password": "결재 비밀번호 설정",
+    "popups_set_the_payment_password_title": "결제 비밀번호 설정",
     "popups_log_out": "로그아웃",
     "popups_following_permissions": "플러그인 ({{pluginName}})( {{pluginURL}} 에 호스팅됩니다) 아래의 권한을 요청합니다.",
     "popups_permissions": "사용 권한",
@@ -643,13 +731,24 @@
     "popups_permission_request_content2": "이것은 마스크 네트워크에 요청된 기능을 올바르게 제공하는 데 필요한 기능을 제공합니다.",
     "popups_welcome": "환영합니다",
     "popups_wallet_token": "토큰",
+    "popups_wallet_collectible": "NFTs",
+    "popups_wallet_collectible_added_successfully": "추가 성공",
     "popups_wallet_dialog_legacy_wallet_tip": "기존 월렛이 탐지되었습니다. 모두 복구하려면 확인을 클릭하세요.",
     "popups_wallet_set_payment_password": "결제 비밀번호 설정",
     "popups_wallet_create_payment_password": "비밀번호 생성",
     "popups_wallet_payment_password": "결제 비밀번호",
     "popups_wallet_set_up_payment_password": "결제 비밀번호 설정",
+    "popups_wallet_old_payment_password": "지난 결제 비밀번호",
+    "popups_wallet_new_payment_password": "새로운 결제 비밀번호",
+    "popups_wallet_confirm_password": "비밀번호 확인",
+    "popups_wallet_new_password_not_match": "새로운 비밀번호가 일치하지 않습니다",
     "popups_wallet_create_payment_password_tip": "최소 8 글자 이상 이용하세요",
+    "popups_wallet_set_payment_password_successfully": "결제 비밀번호 설정 성공",
+    "popups_wallet_term_of_service_agree_part_1": "계속하면 다음을 동의합니다:",
+    "popups_wallet_term_of_service_agree_part_2": "<agreement>서비스 약관</agreement>과 <policy>개인정보처리방침</policy>을 동의합니다",
+    "popups_wallet_reset_tips": "결제 비밀번호를 잊었습니까?",
     "popups_wallet_payment_password_tip": "결제 암호는 8-20자 사이여야 하여 숫자, 문자 및 특수 문자 중 2 가지가 포함되어야 합니다.",
+    "create_wallet_incorrect_payment_password": "잘못된 결제 비밀번호",
     "popups_wallet_start_up_tip": "월렛 연결. 새로운 월렛을 만들거나 시드 문구로 기존 월렛을 복구하세요.",
     "popups_wallet_name_placeholder": "1-12 자 입력하세요",
     "popups_wallet_name_mnemonic": "니모닉",
@@ -658,6 +757,7 @@
     "popups_wallet_name_mnemonic_placeholder": "12나 24 글자의 니모닉 단어를 입력하세요.",
     "popups_wallet_name_origin_password": "기존 비밀번호",
     "popups_wallet_tab_assets": "자산",
+    "popups_wallet_tab_collectibles": "NFTs",
     "popups_wallet_tab_activity": "활동",
     "popups_wallet_derivation_path": "파생 경로 ({{ path }})",
     "popups_wallet_next": "다음",
@@ -737,6 +837,56 @@
     "popups_password_do_not_match": "잘못된 백업 비밀번호",
     "popups_backup_password": "백업 비밀번호",
     "popups_rename_error_tip": "최대 길이는 {{length}} 자입니다.",
+    "popups_switch_Wallet": "월렛 변경",
+    "popups_encrypted_friends": "연락처",
+    "popups_encrypted_friends_search_placeholder": "Next.ID 검색, Twitter, Lens, ENS, 주소",
+    "popups_encrypted_friends_search_no_result": "검색 결과가 없습니다.",
+    "popups_encrypted_friends_no_friends": "암호화된 연락처가 없습니다. 검색해 보세요.",
+    "popups_encrypted_friends_add_friends": "추가",
+    "popups_encrypted_friends_no_associated_accounts": "관련 계정 없음",
+    "popups_encrypted_friends_deleted_successfully": "삭제 성공",
+    "popups_encrypted_friends_added_successfully": "추가 완료",
+    "popups_select_wallet": "월렛 선택",
+    "popups_switch_persona": "페르소나 전환",
+    "popups_recovery": "복구",
+    "popups_next_id": "Next.ID",
+    "popups_wallet_group_title": "월렛 그룹 #{{index}}",
+    "popups_wallet_imported_group_title": "월렛 불러오기",
+    "popups_backup_persona": "페르소나 백업",
+    "popups_persona_rename_tips": "페르소나 이름은 1~24자 이내로 입력해주세요.",
+    "popups_backup_password_rules": "비밀번호에는 대문자와 소문자, 특수 문자 및 숫자가 포함되어야 합니다.",
+    "popups_backup_password_rules_tips": "백업 비밀번호는 대문자, 소문자, 특수 문자 및 숫자를 포함하여 8-20자여야 합니다.",
+    "popups_backup_password_tips": "백업 비밀번호를 설정하고 개인키를 내보낼 수 있습니다.",
+    "popups_backup_password_inconsistency": "입력한 두 개의 암호가 일치하지 않습니다.",
+    "popups_backup_password_incorrect": "잘못된 비밀번호.",
+    "popups_backup_password_invalid": "백업 비밀번호를 입력하고 페르소나 개인키를 내보낼 수 있습니다.",
+    "popups_backup_password_set_successfully": "백업 비밀번호가 설정되었습니다.",
+    "popups_export_private_key_tips": "개인키만 수출이 가능합니다. 다른 데이터 수출할 수 없습니다. 더 많은 데이터를 확인하려면 설정으로 들어가세요: <a>Global Backup </a>",
+    "popups_export_json_file_tips": "이 파일은 현재의 비밀번호로 암호화되어 저장되었습니다. 월렛을 불러올 때 이 파일 해독을 위해 현재의 비밀번호가 필요합니다.",
+    "popups_log_out_tips": "로그아웃 후, 연결된 소셜 계정은 더 이상 암호화하거나 복호화할 수 없습나다. 계정을 다시 이용하려면 아이덴티티, 개인 키, 로컬이나 클라우드 백업으로 복원할 수 있습니다.",
+    "popups_log_out_with_smart_pay_tips_one": "주의: 이 페르소나 {{persona}} 는 SmartPay 월렛의 관리자 계정입니다. 페르소나를 로그아웃한 후에 SmartPay 월렛을 사용하여 블록체인과 상호작용할 수 없습니다.",
+    "popups_log_out_with_smart_pay_tips_other": "주의: 이 페르소나 {{persona}} 는 위에 있는 SmartPay 월렛들의 관리자 계정입니다. 페르소나를 로그아웃한 후에 SmartPay 월렛을 사용하여 블록체인과 상호작용할 수 없습니다.",
+    "popups_log_out_successfully": "로그아웃 성공",
+    "popups_log_out_failed": "로그아웃 실패",
+    "popups_profile_photo_image": "이미지",
+    "popups_profile_photo_nfts": "NFTs",
+    "popups_profile_photo_drag_file": "파일을 끌어서 여기에 놓으세요",
+    "popups_profile_photo_size_limit": "사이즈 한계: 10 MB",
+    "popups_profile_photo_browser_file": "브라우저 파일",
+    "popups_select_and_connect_wallet": "월렛 선택 및 연결",
+    "popups_set_avatar_successfully": "아바타 설정 성공",
+    "popups_set_avatar_failed": "아바타 설정 실패",
+    "popups_wallet_request_source": "소스 요청",
+    "popups_wallet_sign_message": "사인 메시지",
+    "popups_wallet_unlock_erc20_title": "회원님의 {{symbol}} 에 <br /> 액세스할 수 있는 권한을 부여하시겠습니까?",
+    "popups_wallet_unlock_erc20_tips": "권한 승인을 통해 다음의 컨트랙트에 따라<br /> 자산을 접근할 수 있습니다.",
+    "popups_wallet_unlock_erc20_placeholder": "최대 지불 제한 입력",
+    "popups_wallet_unlock_erc20_requested_by": "지불 제한을 요청하는 이용자:",
+    "popups_wallet_unlock_erc20_balance_tips": "이것은 제3자가 현재 잔액에서 {{amount}} {{symbol}} 을 사용하기를 허용합니다.",
+    "popups_wallet_unlock_erc20_balance_too_high_tips": "이를 통해 제3자가 한도액에 도달하거나 사용자가 지출 한도액을 취소할 때까지 토큰 잔액을 모두 사용할 수 있습니다. 만약 이것이 의도된 것이 아니라면, 지출 한도액을 낮추는 것을 고려하시길 바랍니다.",
+    "popups_wallet_unlock_erc20_revoke_tips": "기본 입력은 0으로 사용하는 경우 본 계약에 대한 승인이 취소됩니다.",
+    "popups_wallet_unlock_erc20_approve_amount": "금액 승인",
+    "popups_wallet_unlock_erc20_granted_to": "허용한 대상:",
     "nft_wallet_label": "월렛",
     "plugin_profile_no_wallets": "월렛 연결합니다. <br/>이 섹션은 암호화된 친구에게 표시됩니다.<br/>전시 내용에는 디지털 아트, 기부, 배지<br/>와 다른 온체인 공개 정보가 포함됩니다.",
     "nft_input_address_label": "컨트랙트 주소 추가",
