--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -958,7 +958,7 @@
     "popups_backup_password_rules_tips": "Backup password must be 8-20 characters, including uppercase, lowercase, special characters and numbers.",
     "popups_backup_password_tips": "Please set up backup password to export private key.",
     "popups_backup_password_inconsistency": "The two entered passwords are inconsistent.",
-    "popups_backup_password_incorrect": "Incorrect password.",
+    "popups_backup_password_incorrect": "Incorrect backup password.",
     "popups_backup_password_invalid": "Please enter backup password to export persona private key.",
     "popups_backup_password_set_successfully": "Backup password set successfully",
     "popups_export_private_key_tips": "This export is only for exporting private key. We do not export any other data. If you need more data, please go to Settings: <a> Global Backup </a>",
