--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -438,7 +438,7 @@
     "plugin_web3_profile_recommend_feature_description": "Optimize your social profile by customizing the display of Web3 features.",
     "plugin_nft_avatar_recommend_feature_description": "Set your NFT as profile picture with exclusive aura.",
     "application_hint": "Socialize and show off your NFTs. People can bid, buy and view your valuable NFTs without leaving Twitter.",
-    "plugin_goPlusSecurity_description": "Provide you with fast, reliable and convenient security services",
+    "plugin_goPlusSecurity_description": "Provide you with fast, reliable and convenient security services.",
     "plugin_red_packet_create": "Create your Lucky Drop.",
     "plugin_red_packet_claimed": "Claimed",
     "plugin_red_packet_claim": "Claim",
