--- a/packages/mask/dashboard/locales/en-US.json
+++ b/packages/mask/dashboard/locales/en-US.json
@@ -455,14 +455,14 @@
     "data_backup_title": "Select the contents of the backup",
     "data_backup_description": "Please select the appropriate method to restore your personal data.",
     "cloud_backup_title": "login to your Mask Cloud",
-    "cloud_backup_email_exists": "The email address used for the last backup was <strong>{{account}}</strong>.",
-    "cloud_backup_mobile_exists": "The mobile number used for last backup is <strong>{{account}}</strong>.",
+    "cloud_backup_backup_exists": "You used <strong>{{account}}</strong> for the last cloud backup..",
     "cloud_backup_no_exist_tips": "Please use your frequently used email account or mobile phone for backup.",
     "cloud_backup_email_title": "E-mail",
     "cloud_backup_phone_title": "Mobile",
     "cloud_backup_incorrect_email_address": "The email address is incorrect.",
     "cloud_backup_incorrect_verified_code": "The code is incorrect.",
     "cloud_backup_email_verification_code": "Email verification code",
+    "cloud_backup_phone_verification_code": "Phone verification code",
     "cloud_backup_preview_title": "Welcome to Mask Cloud Services",
     "cloud_backup_preview_description": "Please select the appropriate method to restore your personal data.",
     "cloud_backup_preview_switch_other_account": "Switch other account",
