--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -741,7 +741,7 @@
     "popups_wallet_settings_show_private_key": "Show Private Key",
     "popups_wallet_settings_backup_wallet": "Backup Wallet",
     "popups_wallet_settings_enter_payment_password": "Enter Payment Password",
-    "popups_wallet_settings_export_private_key_title": "Select the wallet to export the private key",
+    "popups_wallet_settings_export_private_key_title": "Click on the down-arrow icon to see the private key.",
     "popups_wallet_settings_rename_tips": "Wallet name must between 3 to 18 characters.",
     "popups_wallet_settings_name_exists": "The wallet name already exists.",
     "popups_wallet_settings_remove_wallet": "Remove Wallet",
@@ -800,6 +800,7 @@
     "popups_wallet_name_mnemonic": "Mnemonic",
     "popups_wallet_name_json_file": "Json File",
     "popups_wallet_name_private_key": "Private Key",
+    "popups_wallet_name_keystore": "Keystore",
     "popups_wallet_name_mnemonic_placeholder": "Enter 12 or 24 mnemonic words.",
     "popups_wallet_name_origin_password": "Original Password",
     "popups_wallet_tab_assets": "Tokens",
@@ -959,6 +960,7 @@
     "popups_backup_password_set_successfully": "Backup password set successfully",
     "popups_export_private_key_tips": "This export is only for exporting private key. We do not export any other data. If you need more data, please go to Settings: <a> Global Backup </a>",
     "popups_export_json_file_tips": "This file has been encrypted and stored with your current password. Your current password is needed to decrypt this file when using it to import wallet.",
+    "popups_export_keystore_tips": "This JSON file is encrypted with your current payment password. The same password is required for decryption when importing this wallet.",
     "popups_log_out_tips": "After logging out, your associated social accounts will no longer decrypt past encrypted messages. If you need to reuse your account, you can recover your account with your identity, private key, local or cloud backup.",
     "popups_log_out_with_smart_pay_tips_one": "Please note: This Persona {{persona}} is the management account of above listed SmartPay wallet. You cannot use SmartPay wallet to interact with blockchain after logging out persona.",
     "popups_log_out_with_smart_pay_tips_other": "Please note: This Persona {{persona}} is the management account of above listed SmartPay wallets. You cannot use SmartPay wallet to interact with blockchain after logging out persona.",
