--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -905,7 +905,7 @@
     "popups_disconnect_persona": "Disconnect Social Account?",
     "popups_new_persona_disconnect_confirmation_description": "This twitter verification relationship with Persona will not be recorded in Next.ID.<br /> <br/> Performing this action will impact these Persona-related features:<br /> <li>Send the encrypted message.</li> <li>‘Browser your Web3’ features.</li><br/>",
     "popups_persona_disconnect_confirmation_description": "This persona verification record will no longer show up in your verification profile page. Your\n Mask friends can no longer send encrypted message to you by this persona or check your Web3\n products.",
-    "popups_persona_disconnect_tips": "Do you want to remove the verified association between the Twitter account @<strong>{{identity}}</strong> and {{personaName}}?",
+    "popups_persona_disconnect_tips": "Do you want to remove the verified association between the Twitter account @<strong>{{- identity}}</strong> and {{- personaName}}?",
     "popups_wallet_disconnect_tips": "Are you sure to remove the connected wallet <strong>{{wallet}}</strong>?",
     "popups_persona": "Persona",
     "popups_twitter_id": "Twitter ID",
