--- a/packages/plugins/NextID/src/locales/qya-AA.json
+++ b/packages/plugins/NextID/src/locales/qya-AA.json
@@ -61,6 +61,5 @@
     "persona_load_failed": "crwdns20721:0crwdne20721:0",
     "applications_create_persona_title": "crwdns20723:0crwdne20723:0",
     "applications_create_persona_hint": "crwdns20725:0crwdne20725:0",
-    "applications_create_persona_action": "crwdns20727:0crwdne20727:0",
-    "enable_plugin": "crwdns18118:0crwdne18118:0"
+    "applications_create_persona_action": "crwdns20727:0crwdne20727:0"
 }
