--- a/packages/plugins/NextID/src/locales/en-US.json
+++ b/packages/plugins/NextID/src/locales/en-US.json
@@ -61,6 +61,5 @@
     "persona_load_failed": "Load failed",
     "applications_create_persona_title": "Persona",
     "applications_create_persona_hint": "Please create a Persona and verify your account to use this function.",
-    "applications_create_persona_action": "Create persona",
-    "enable_plugin": "You need to open the DAPP to view the specific content"
+    "applications_create_persona_action": "Create persona"
 }
