--- a/packages/plugins/Snapshot/src/locales/qya-AA.json
+++ b/packages/plugins/Snapshot/src/locales/qya-AA.json
@@ -35,7 +35,5 @@
     "plugin_snapshot_vote_confirm_dialog_warning": "crwdns21453:0crwdne21453:0",
     "plugin_snapshot_current_result_title": "crwdns21455:0crwdne21455:0",
     "plugin_snapshot_download_report": "crwdns21457:0crwdne21457:0",
-    "enable_plugin_boundary": "crwdns21459:0crwdne21459:0",
-    "loading": "crwdns21461:0crwdne21461:0",
-    "enable_plugin_boundary_description": "crwdns21463:0crwdne21463:0"
+    "loading": "crwdns21461:0crwdne21461:0"
 }
