--- a/packages/plugins/Snapshot/src/locales/zh-CN.json
+++ b/packages/plugins/Snapshot/src/locales/zh-CN.json
@@ -35,7 +35,5 @@
     "plugin_snapshot_vote_confirm_dialog_warning": "此操作不可撤销。",
     "plugin_snapshot_current_result_title": "当前结果",
     "plugin_snapshot_download_report": "下载报告",
-    "enable_plugin_boundary": "开启插件",
-    "loading": "加载中",
-    "enable_plugin_boundary_description": "此功能已在应用设置中被关闭。启用插件以完全访问。"
+    "loading": "加载中"
 }
