--- a/packages/plugins/NextID/src/locales/zh-CN.json
+++ b/packages/plugins/NextID/src/locales/zh-CN.json
@@ -61,14 +61,5 @@
     "persona_load_failed": "加载失败",
     "applications_create_persona_title": "身份",
     "applications_create_persona_hint": "使用此功能需要先创建一个身份并验证您的社交媒体账号。",
-    "applications_create_persona_action": "创建身份",
-    "applications_persona_title": "身份",
-    "applications_persona_copy": "复制成功",
-    "applications_persona_connect": "连接到 {{-nickname}}",
-    "applications_persona_connect_hint": "请在使用 dApp之前连接到 {{-nickname}} 。",
-    "applications_persona_verify": "验证 {{-nickname}}",
-    "applications_persona_verify_hint": "请在使用 dApp之前验证当前使用社交媒体账号的身份。",
-    "applications_persona_verify_connect": "连接到 {{-nickname}} 并进行验证",
-    "applications_persona_verify_connect_hint": "请在使用 dApp之前连接到 {{-nickname}} 并发送验证推文。",
-    "enable_plugin": "开启插件"
+    "applications_create_persona_action": "创建身份"
 }
