--- a/packages/mask/dashboard/locales/en-US.json
+++ b/packages/mask/dashboard/locales/en-US.json
@@ -455,7 +455,7 @@
     "data_backup_title": "Select the contents of the backup",
     "data_backup_description": "Please select the appropriate method to restore your personal data.",
     "cloud_backup_title": "login to your Mask Cloud",
-    "cloud_backup_backup_exists": "You used <strong>{{account}}</strong> for the last cloud backup..",
+    "cloud_backup_backup_exists": "You used <strong>{{account}}</strong> for the last cloud backup.",
     "cloud_backup_no_exist_tips": "Please use your frequently used email account or mobile phone for backup.",
     "cloud_backup_email_title": "E-mail",
     "cloud_backup_phone_title": "Mobile",
