docs(i18n): sync i18n files from Crowdin (#10847)

--- a/packages/shared/src/locales/ja-JP.json
+++ b/packages/shared/src/locales/ja-JP.json
@@ -1,5 +1,6 @@
 {
     "send": "送信",
+    "search_area": "捜索エリア",
     "approve": "承認します",
     "operation": "操作",
     "approve_mask": "MASKを承認しますか？",
@@ -32,6 +33,7 @@
     "select_collectibles": "コレクティブを選択",
     "no_collectible_found": "コレクションが見つかりません.",
     "manage_token_list": "トークンリストを管理",
+    "mobile_number": "携帯番号",
     "token_list_loading": "読み込み中",
     "erc20_token_list_placeholder": "名前またはコントラクトアドレス (USDC または 0x234...",
     "erc20_token_list_loading": "トークンリストを読み込み中...",
@@ -222,6 +224,43 @@
     "plugin_wallet_fortmatic_tips": "FortmaticはETHとBNBチェーンのみを対応しています。",
     "plugin_wallet_support_chains_tips": "EVMチェーン、ETH、BNBチェーン、Polygon、Arb、Opなどに対応しています。",
     "plugin_wallet_connect_fortmatic": "Fortmaticに接続",
+    "plugin_wallet_choose_network": "ネットワークを選択",
+    "plugin_wallet_select_provider_dialog_title": "ウォレットを接続",
+    "plugin_wallet_view_on_explorer": "エクスプローラーで表示",
+    "plugin_wallet_disconnect": "接続解除",
+    "plugin_wallet_dialog_title": "ウォレットアカウント",
+    "recent_transaction_success": "完了",
+    "recent_transaction_failed": "失敗しました",
+    "wallet_status_pending_clear": "クリア",
+    "wallet_status_pending_one": "{{count}} 保留中",
+    "wallet_status_pending_other": "{{count}} 保留中",
+    "wallet_status_pending_clear_all": "すべて消去",
+    "wallet_risk_warning_no_select_wallet": "ウォレットを選択していません",
+    "wallet_risk_warning_dialog_title": "リスク警告",
+    "wallet_risk_warning_content": "ユーザーの皆様へ<br/><br/>Mask Networkのウォレット関連プラグインをご利用の際は、以下の利用リスクをご確認ください。<br/><br/>Mask Networkは、非商用の無料サービスを提供しています。プラグインは、コミュニティメンバーやその他の優れたDAppチームによって提供されています。分散型ネットワークの自由度やその他の不安定なリスク要因のため、ユーザーはウォレットのニーモニックワードや秘密鍵などの機密情報を適切に保護することが求められます。ブロックチェーン契約のやり取りを行う際には、十分に注意してください。サードパーティ製のDApps（プラグイン）によるリスクは、サードパーティ製のDApps自身が負うことになります。確認ボタンをクリックすることは、上記の起こりうるリスクを負担することに同意することになります。",
+    "wallet_risk_warning_confirm_tips": "確認ボタンをクリックすると、上記のリスクを負うことに同意することになります。",
+    "confirm": "確認",
+    "done": "完了",
+    "wallet_risk_confirm_confirming": "確認中",
+    "wallet_risk_confirm_failed": "確認に失敗しました",
+    "plugin_wallet_snackbar_wait_for_confirming": "ウォレットで取引を確認する",
+    "plugin_wallet_snackbar_confirmed": "取引が確認されました",
+    "plugin_wallet_snackbar_failed": "取引が失敗しました",
+    "popups_wallet_gas_fee_settings_low": "低い",
+    "popups_wallet_gas_fee_settings_medium": "中",
+    "popups_wallet_gas_fee_settings_high": "高",
+    "wallet_transfer_error_gas_limit_absence": "ガスの上限を入力してください",
+    "popups_wallet_gas_fee_settings_usd": " ≈ <span>{{usd}}</span>",
+    "wallet_transfer_gwei": "GWEI",
+    "popups_wallet_gas_fee_settings_max_fee": "最大料金",
+    "popups_wallet_gas_fee_settings_max_priority_fee": "最大優先手数料",
+    "popups_wallet_gas_fee_settings_gas_limit": "ガス制限",
+    "wallet_transfer_error_max_fee_too_low": "最大手数料がネットワーク状況に対して低すぎます。",
+    "wallet_transfer_error_max_fee_too_high": "最大手数料が必要以上です",
+    "wallet_transfer_error_max_priority_gas_fee_positive": "最大優先手数料は0GWEIより大きくなければなりません",
+    "wallet_transfer_error_max_priority_gas_fee_too_low": "最大優先料金がネットワーク状況に対して低すぎます。",
+    "wallet_transfer_error_max_priority_gas_fee_too_high": "最大優先料金は必要以上に高いです。必要以上に支払うになります。",
+    "wallet_transfer_error_max_priority_gas_fee_imbalance": "最大手数料は最大優先手数料より低くすることはできません",
     "applications": "アプリケーション",
     "application_settings": "アプリ設定",
     "application_tooltip_hint_sns_persona_unmatched": "Twitter ID 認証済みのペルソナ({{currentSNSConnectedPersonaPublicKey}}) は、現在のペルソナ({{currentPersonaPublicKey}})と一致しません。ペルソナ({{currentSNSConnectedPersonaPublicKey}})に切り替えて、再度お試し下さい。",
@@ -265,5 +304,15 @@
     "applications_persona_connect": "{{-nickname}} に接続",
     "applications_persona_connect_hint": "dAppsを使用する前に、 {{-nickname}} に接続してください。",
     "applications_persona_verify": "{{-nickname}} の認証",
-    "applications_persona_verify_hint": "dAppsを使用する前に、ソーシャルメディアアカウントで現在のペルソナを確認してください。"
+    "applications_persona_verify_hint": "dAppsを使用する前に、ソーシャルメディアアカウントで現在のペルソナを確認してください。",
+    "compose_encrypt_visible_to_share": "と共有",
+    "compose_encrypt_visible_to_share_sub": "選択した連絡先のみ",
+    "compose_encrypt_share_dialog_empty": "パーソナルベースの暗号化の友達はローカルにいません。検索してみてください。",
+    "persona_required": "ペルソナが必要です。",
+    "create": "作成",
+    "connect": "接続する",
+    "reset": "リセット",
+    "editor": "編集者",
+    "typed_message_text_alert": "現在、TypedMessageTextのみ対応しています。",
+    "share_to_social_networks": "ソーシャル ネットワークに共有"
 }
