--- a/packages/plugins/SwitchLogo/src/locales/en-US.json
+++ b/packages/plugins/SwitchLogo/src/locales/en-US.json
@@ -9,5 +9,12 @@
     "mask_network": "Mask Network",
     "share_text": "I just replaced Twitter X logo with the original blue bird one with Mask Network extension.",
     "share_mask": "Download https://mask.io to try more powerful tools on Twitter.",
-    "description": "Switch between the classic Twitter logo and the new one."
+    "description": "Switch between the classic Twitter logo and the new one.",
+    "switch_logo_title": "Switch Twitter Logo",
+    "switch_logo_save_tip": "Share and recommend this feature after saving.",
+    "switch_logo_classics_logo": "Classics Logo",
+    "switch_logo_new_logo": "New Logo",
+    "switch_logo_share_text": "I just replaced Twitter X logo with the original blue bird one with Mask Network extension.",
+    "switch_logo_share_mask": "Download https://mask.io to try more powerful tools on Twitter.",
+    "switch_logo_description": "Switch between the classic Twitter logo and the new one."
 }
