--- a/packages/mask/shared-ui/locales/zh-CN.json
+++ b/packages/mask/shared-ui/locales/zh-CN.json
@@ -790,6 +790,7 @@
     "popups_wallet_name_mnemonic": "助记词",
     "popups_wallet_name_json_file": "Json文件",
     "popups_wallet_name_private_key": "私钥",
+    "popups_wallet_name_keystore": "密钥库",
     "popups_wallet_name_mnemonic_placeholder": "请输入以空格分隔的助记词",
     "popups_wallet_name_origin_password": "原密码",
     "popups_wallet_tab_assets": "资产",
@@ -949,6 +950,7 @@
     "popups_backup_password_set_successfully": "备份密码设置成功。",
     "popups_export_private_key_tips": "此导出仅用于导出私钥。我们不导出任何其他数据。如果您需要导入更多数据，请前往设置： <a> 全局备份 </a>",
     "popups_export_json_file_tips": "此文件已加密并以您当前的密码存储。 使用当前密码导入钱包时解密此文件。",
+    "popups_export_keystore_tips": "此 JSON 文件使用您当前的支付密码加密。导入此钱包时解密需要相同的密码。",
     "popups_log_out_tips": "身份登出后，您所关联的社交网络账户将不能解密过去的加密消息。 如果您需要重新使用您的身份，您可以使用您的身份助记词，身份私钥，本地或云端备份进行恢复。",
     "popups_log_out_with_smart_pay_tips_one": "请注意: \n该身份 {{persona}} 是您 SmartPay 钱包的管理账户。 如果退出身份账户, 您将无法使用 SmartPay 钱包进行任何交易。",
     "popups_log_out_with_smart_pay_tips_other": "请注意: \n该身份 {{persona}} 是您 SmartPay 钱包的管理账户。 如果退出身份账户, 您将无法使用 SmartPay 钱包进行任何交易。",
@@ -1193,13 +1195,6 @@
     "about_collection": "关于 {{- name}}",
     "hide_collectible": "隐藏 {{-name}}",
     "hide_collectible_description": "确认隐藏{{- name}}？您可以在任何时候通过添加来重新展示这个NFT。",
-    "switch_logo_title": "切换 Twitter 标志",
-    "switch_logo_save_tip": "保存后分享并推荐此功能。",
-    "switch_logo_classics_logo": "经典标志",
-    "switch_logo_new_logo": "新标志",
-    "switch_logo_share_text": "我刚刚使用 Mask Network 插件把Twitter X 图标替换成了原来的蓝鸟图标。",
-    "switch_logo_share_mask": "下载 https://mask.io，在Twitter上尝试更强大的工具。",
-    "switch_logo_description": "在经典的Twitter标志和新标志之间切换。",
     "add_new_address_to_an_existing_group": "向现有组添加新地址",
     "or_create_a_new_wallet_group": "或者创建一个新的钱包组"
 }
