fix: mf-5403 expired countdown

--- a/packages/plugins/Calendar/src/locales/en-US.json
+++ b/packages/plugins/Calendar/src/locales/en-US.json
@@ -10,5 +10,6 @@
     "news": "News",
     "event": "Events",
     "nfts": "NFTs",
-    "content_end": "The content is fully loaded"
+    "content_end": "The content is fully loaded",
+    "expired": "Expired"
 }
