--- a/packages/mask/dashboard/locales/en-US.json
+++ b/packages/mask/dashboard/locales/en-US.json
@@ -103,7 +103,7 @@
     "sign_in_account_cloud_backup_decrypt_failed": "Decrypt failed, please check password",
     "incorrect_backup_password": "Incorrect Backup Password.",
     "incorrect_identity_mnemonic": "Incorrect recovery phrase.",
-    "sign_in_account_cloud_backup_email_format_error": "The email is incorrect.",
+    "sign_in_account_cloud_backup_email_format_error": " Invalid email address format.",
     "sign_in_account_cloud_backup_phone_format_error": "The phone number is incorrect.",
     "sign_in_account_cloud_backup_synchronize_password_tip": "You have successfully verified your cloud password and recovered your backup. To unify backup passwords, do you want to synchronize your cloud password as local backup password?",
     "cloud_backup": "Cloud Backup",
@@ -459,7 +459,7 @@
     "cloud_backup_no_exist_tips": "Please use your frequently used email account or mobile phone for backup.",
     "cloud_backup_email_title": "E-mail",
     "cloud_backup_phone_title": "Mobile",
-    "cloud_backup_incorrect_email_address": "The email address is incorrect.",
+    "cloud_backup_incorrect_email_address": "Invalid email address format.",
     "cloud_backup_incorrect_verified_code": "The code is incorrect.",
     "cloud_backup_email_verification_code": "Email verification code",
     "cloud_backup_phone_verification_code": "Phone verification code",
